# AI-News-Flow---Meta

./: .env.example  .gitignore  DEPLOY.md  NEXT_STEPS.md  QA_AGENT.md  README.md  engagement_automation_analysis.md  pyproject.toml
.github/workflows/: cleanup.yml  publish.yml
article/: index.html
assets/fonts/: .gitkeep
config/: content_rules.yaml  sources.yaml
prompts/: rewriter.md  scorer.md
src/: __init__.py  config.py  main.py
src/ai/: llm_client.py  rewriter.py  scorer.py
src/carousel/: builder.py  slides.py  theme.py
src/posting/: manychat.py  scheduler.py
src/publishers/: facebook.py  instagram.py  meta_base.py
src/sources/: __init__.py  hackernews.py  reddit.py  rss.py
src/storage/: sheets.py
src/utils/: alerts.py  cleanup.py  hashing.py  image_hosting.py
tests/: test_hashing.py  test_scheduler.py  test_scorer.py
tests/fixtures/: sample_news.json
